Resolve vscode warnings